package it.unibo.pps.scalaman.model

/** A temporary effect granted by a bonus collectible. */
enum BonusEffect:
  case SlowDown
  case Invulnerability
